# ZuruPyls

pyls-main/: .gitignore  LICENSE  README.md  input.json  pyproject.toml
pyls-main/src/pyls_amanhere/: __init__.py  pyls_assg.py
pyls-main/tests/: test_pyls.py
